Implement authentication service, update application properties for SSL support, and configure CORS