@@ -10,22 +10,31 @@ import org.springframework.web.cors.UrlBasedCorsConfigurationSource;
 import java.net.InetAddress;
 import java.net.NetworkInterface;
 import java.net.SocketException;
-import java.util.Arrays;
 import java.util.Enumeration;
+import java.util.List;
 
 @RequiredArgsConstructor
 @Configuration
 public class CorsConfig {
+
     @Bean
     public CorsConfigurationSource corsConfigurationSource() {
         CorsConfiguration configuration = new CorsConfiguration();
-        configuration.setAllowedOrigins(Arrays.asList("http://localhost:8080", "http://127.0.0.1:8080", "http://127.0.0.1:5500", "*", getNetworkIp()));
-        configuration.setAllowedMethods(Arrays.asList("GET", "POST", "PUT", "DELETE"));
-        configuration.addAllowedHeader("*");
+//        configuration.setAllowedOrigins(List.of("http://localhost:8080"));
+
+//        configuration.setAllowedOrigins(List.of(
+//                "http://localhost:8080",
+//                "https://localhost:8080"
+//        ));
+
+        configuration.addAllowedOriginPattern("*");
+
+        configuration.setAllowedMethods(List.of("GET", "POST", "PUT", "DELETE", "OPTIONS"));
+        configuration.setAllowedHeaders(List.of("*"));
+        configuration.setAllowCredentials(true);
 
         UrlBasedCorsConfigurationSource source = new UrlBasedCorsConfigurationSource();
         source.registerCorsConfiguration("/**", configuration);
-
         return source;
     }
 
@@ -50,7 +59,7 @@ public class CorsConfig {
             }
 
             if (lastIpAddress != null) {
-                return "http://"+lastIpAddress+":8080";
+                return "http://" + lastIpAddress + ":9000";
             } else {
                 return "";
             }
